# docker-workshop

./: Dockerfile  README.md  Tobexint.ipynb  docker-compose.yaml  ingest_data.py  pyproject.toml  sql.ipynb
.ipynb_checkpoints/: data_ingest-checkpoint.ipynb
pipeline/: pipeline.py
